# CitationRetrieval

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  example_evaluation.py  inspect_dspy.py  main.py  pyproject.toml  setup_studio_env.sh  split_train.py  visualization.py
BM25/: bm25ScholarCopilot.py
BM25/animal_index_bm25/: data.csc.index.npy  indices.csc.index.npy  params.index.json  vocab.index.json
E5/: E5_Dense_Retrieval.ipynb
baseline/: data.py
baseline/dataset/: candidates.csv  data_cleaning.py  verified_examples.json
baselines/bm25/: README.md
baselines/cite_agent/: DATASET_MIGRATION_GUIDE.md  README.md
baselines/dense/: README.md
cite_agent/: pyproject.toml
cite_agent/CiteME/: README.md
cite_agent/src/: main.py
citeagent_src/: run_citeagent_evaluation.py  scholar_adapter.py
citeme_dataset/: candidates.csv.numbers  verified_examples.csv
client/: .env.local.docker  Dockerfile  README.md
client/components/: citation-finder.tsx
corpus_loaders/: __init__.py
corpus_loaders/scholarcopilot/: __init__.py
datasets/: CiteME.tsv  __init__.py
datasets/scholarcopilot/: __init__.py
dspy_prompt_generator/: modules.py  run_prompt_classifier.py  signatures.py
evaluation/: README.md  __init__.py  data_loader.py  evaluator.py  metrics.py  test_citeagent.py
evaluation/citeagent/: citeagent.py
evaluation/models/: __init__.py  base_model.py  bm25_model.py  citeagent_model.py  citeagent_real.py  citeagent_template.py  dense_model.py  langchain_agent_model.py  llm_baseline.py
evaluations/tests/: conftest.py  test_aggregator_integration.py  test_self_evolution_integration.py  test_workflow_inmemory.py
multi_agent_pipeline/: README.md  langgraph.json
multi_agent_pipeline/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
multi_agent_pipeline/src/: __init__.py  data.py  llm.py  orchestrator.py  state.py  types.py  verify_citation.py  verify_google_scholar.py
results/: prompt_eval.jsonl  prompt_eval_gpt5mini.jsonl
results/example/: bm25_demo_20251104_145735_failures.csv  bm25_demo_20251104_145735_failures.json  bm25_demo_20251104_145735_metrics.json  bm25_demo_20251104_145735_predictions.json  bm25_demo_20251111_141311_metrics.json  bm25_demo_20251111_141311_predictions.json  bm25_demo_20251113_125153_failures.csv  bm25_demo_20251113_125153_failures.json  bm25_demo_20251113_125153_metrics.json  bm25_demo_20251113_125153_predictions.json  bm25_demo_20251113_131048_failures.csv  bm25_demo_20251113_131048_failures.json  bm25_demo_20251113_131048_metrics.json  bm25_demo_20251113_131048_predictions.json  citeagent_demo_20251110_175038_metrics.json  citeagent_demo_20251110_220332_failures.json  citeagent_demo_20251110_220332_metrics.json  citeagent_demo_20251111_141311_metrics.json  citeagent_demo_20251111_141311_predictions.json  citeagent_demo_20251113_125153_failures.csv  dense_demo_20251111_141330_metrics.json  (+19 more)
server/: .dockerignore  .env.example  .gitignore  ABLATION_STUDY_GUIDE.md  Dockerfile  EVALUATION_README.md  LLM_FIXES_AND_OPTIONS.md  LLM_RERANKER_OPTIMIZATION.md  NOTEBOOK_CACHE_GUIDE.md  PIPELINE_DEFAULTS.md  README.md  app.py  check_citation_fields.py  compare_baselines_vs_system.py  compare_models.py  debug_evaluation.py  evaluate.py  evaluate_baselines_with_reranking.py  generate_individual_graphs.py  install.py  main.py  pyproject.toml  quick_dataset_check.py  run_evaluation.sh  test_dspy_reformulator_batch.py  test_dspy_reformulator_single.py  test_llm_reranker_simple.py  test_single_example.ipynb  test_single_example.py
src/: __init__.py  data_loader.py  evaluator.py  visualization.py
tests/: test_optimization.py
(+414 files in other folders)
